Alignment bug fixes

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img {
     animation: front-in-1 0.6s -0.2s both;
   position: absolute;
   top: 5%;
-  left: 20%;
+  left: 30%;
   right: 25%;
   max-width: 180vw;
   filter: drop-shadow(0 0 32px rgba(0, 0, 0, 0.5));
@@ -26,7 +26,7 @@ img {
     background-color: rgba(24, 28, 46, 0.85);
     position: absolute;
     top: 250px;
-    left: 20%;
+    left: 30%;
     right: 20%;
     z-index: 1;
     border-radius: 5px;
